hide and show delete button when active class, & alignment fixes

--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -1,9 +1,16 @@
 .comment-container {
     display: flex;
+    flex-direction: column;
     gap: 5px;
     padding: 5px;
     font-size: 14px;
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.comment-container > div:nth-child(1) {
+    display: flex;
+    align-items: center;
+    gap: 5px;
 }
 
 .comment-data {
@@ -11,6 +18,7 @@
     flex-direction: column;
     background-color: #F0F2F5;
     width: fit-content;
+    max-width: 80%;
     border-radius: 1rem;
     padding-left: 10px;
     padding-right: 10px;
@@ -21,4 +29,32 @@
 .comment-user {
     font-weight: 600;
     font-size: .75rem;
+}
+
+.delete-comment-icon {
+    width: 100%;
+    height: 100%;
+}
+
+.delete-comment-button {
+    height: 30px;
+    width: 30px;
+    border-radius: 50%;
+    border: none;
+    display: none;
+    background-color: white;
+}
+
+.delete-comment-button.active {
+    display: block;
+}
+
+.delete-comment-button:hover {
+    background-color:#F0F2F5;
+    cursor: pointer;
+}
+
+.comment-timestamp {
+    font-size: smaller;
+    margin-left: 50px;
 }
